libs/domain_macros/derive_entity/tests/ui/fail_unnamed_fields.stderr
error: Entity derive only works on structs with named fields
 --> tests/ui/fail_unnamed_fields.rs:3:10
  |
3 | #[derive(Entity)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
