libs/domain_macros/derive_entity/tests/ui/fail_unnamed_fields.rs
use derive_entity::Entity;

#[derive(Entity)]
struct TupleUser(#[entity_id] i32, String);

fn main() {}